# test-py

./: .gitignore  Dockerfile  Makefile  README.md  compose-dev.yaml  pyproject.toml
bot/: main.py
